@@ -4,6 +4,7 @@
 * Add - *Early access*: allow your store to collect payments with iDEAL. Enable the feature in settings!
 * Add - Split discount line in timeline into variable fee and fixed fee.
 * Fix - Align table items according to design correctly.
+* Fix - Fatal error if wcpay_multi_currency_enabled_currencies is a string.
 * Fix - Fix database connection error on account cache clear.
 * Fix - Fix fatal error logged when updating analytics data when account is not connected to Stripe.
 * Fix - Multi-Currency Compatibility fatal error with Subscriptions when account is not connected to Stripe.
